# Project_Singularity

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AIGC_Experience_Chain.en.md  AIGC_Experience_Chain.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST_ANALYSIS.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  tasks.md  周报模板.md  教师评审表_模板.md  项目总结报告_模板.md  项目计划书_完整版.md  项目进度检查清单.md
.github/: PULL_REQUEST_TEMPLATE.md
02_Scripts/: 关键帧提示词汇总表.md  分镜脚本_模板.md  奇点回响_剧本与世界观.md  角色圣经_模板.md  详细分镜表.md
03_Workflows/: ComfyUI节点连接说明.md  Flux_Character_Consistency.json  README.md  Wan22_Dual_Expert_Video.json
04_SOP/: SOP_Project_Singularity.md  后期制作规范.md  音频制作规范.md
06_Research/: QA测试与盲测方案.md  asset_dashboard.md  hardware_and_software_checklist.md  preflight_report.md  tech_stack_and_budget.md  video_gen_log.csv  video_quality_report.md  参数调优记录表.md  发布平台计划.md  失败案例记录表.md  授权合规清单.md  数据备份与版本控制方案.md  第一阶段交叉检查报告.md
07_Team/: collaboration_tools_guide.md  expert_team.md  roles.md  任务分派与启动会.md  第二阶段任务分派与执行计划.md
08_Automation/: README.md  asset_dashboard.py  batch_keyframe_gen.py  benchmark.py  daily_brief.py  deploy_comfyui.sh  elevenlabs_tts_api.py  init_git.sh  kling_video_api.py  package_workflows.sh  preflight_check.py  project_health_check.py  render_queue.py  requirements-dev.txt  requirements.txt  storyboard_to_video.py  suno_music_api.py  sync_repos.sh  video_quality_check.py
09_Release/: presentation_template.md  release_checklist.md  (+1 more)
(+38 files in other folders)
