[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-singularity"
version = "0.2.0"
description = "An industrial-grade AIGC video production pipeline template."
readme = "README.en.md"
license = {text = "MIT"}
authors = [
    {name = "Project Singularity Team"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Creative Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/MS33834/Project_Singularity"
Repository = "https://github.com/MS33834/Project_Singularity"
Issues = "https://github.com/MS33834/Project_Singularity/issues"

[tool.setuptools.packages.find]
where = ["08_Automation"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
